# tap-amazon-sp

./: pyproject.toml
tap_amazon_sp/: __init__.py  constants.py  streams.py
tap_amazon_sp/schemas/: create_report.json  get_report.json
tests/tap_amazon_sp/: test_streams.py
